Fixed page overflow issue and added optional spacers in ovveride

--- a/frontend/src/components/navigation.scss
+++ b/frontend/src/components/navigation.scss
@@ -61,11 +61,11 @@ $linkSpacing: 1em;
     &__menu{
         @include overlay($mode: fixed, $layer: 200);
         background: #fff;
-        overflow: hidden;
         &--container{
-            position: relative;
+            position: absolute;
             display: flex;
-            height: 100%;        
+            height: 100vh;
+            width: 100vw;       
         }
         &--close{
             text-align: center;
@@ -109,6 +109,10 @@ $linkSpacing: 1em;
         }
         &--list-items{
             flex: 1 0;
+            a{
+                display: block;
+                margin: $linkSpacing 0;
+            }
         }
     }
 }
