--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -18,15 +18,6 @@ body {
     padding: 0;
     min-height: 100vh;
     width: 100vw;
-    @include mobile {
-        max-width: $mobile-width;
-    }
-    @include tablet {
-        max-width: $tablet-width;
-    }
-    @include desktop {
-        max-width: $desktop-width;
-    }
 }
 
 body {
